--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -183,3 +183,21 @@
 	url = {https://linkinghub.elsevier.com/retrieve/pii/S2666827022000202},
 	langid = {en}
 }
+
+@book{pymupdf/2024,
+	title = {pymupdf/PyMuPDF},
+	year = {2024},
+	month = {02},
+	date = {2024-02-26},
+	publisher = {PyMuPDF},
+	url = {https://github.com/pymupdf/PyMuPDF},
+	note = {original-date: 2012-10-06T18:54:25Z}
+}
+
+@article{porter2001,
+	title = {Snowball: A Language for Stemming Algorithms.},
+	author = {Porter, M. F.},
+	year = {2001},
+	date = {2001},
+	url = {https://snowballstem.org}
+}
